# MnemoCLI

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  config.ini  main.py  pyproject.toml  random_drill.py  random_numbers.py  random_words.py  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml
data/: olympic_history.json
json/: english.json
languages/backup/: portuguese.json
mnemocli/: __init__.py  cli.py  config_manager.py  graph_manager.py  middle_out.py  normal_run.py  pairrun.py  palace_rush.py  palace_walk.py  random_drill.py  random_numbers.py  random_words.py  stats_manager.py  ui.py
mnemocli/languages/: portuguese.json
